<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_name">Fifteen</string>
    <string name="about_author">Alexey \"Necro\" Kurdyukov, 2017</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="splash">Splash Screen</string>
    <string name="game">Game Screen</string>
    <string name="menu">Menu Screen</string>
    <string name="help">Help Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="settings">Settings Screen</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="settings_sound">Sound FX</string>
    <string name="settings_music">BG Music</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>
    <string name="settings_resetscores">Reset game progress and score</string>
    <string name="settings_resetalert_title">Game progress and scores reset</string>
    <string name="settings_resetalert_question">Reset all data?</string>


    <!--<string name="menu_start_game_fifteen">&quot;15&quot;</string>-->
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Options</string>

    <string name="opt" translatable="false">options.xml</string>
    <string name="opt_sfx" translatable="false">sfx</string>
    <string name="opt_bgm" translatable="false">bgm</string>

    <string name="game_won">You won! )))</string>
    <string name="game_loose">You loose ;(</string>

    <string name="scorefile" translatable="false">scores.xml</string>
    <string name="menu_scores">Hi scores</string>
    <string name="settings_reveal" translatable="false">Reveal all levels</string>
    <string name="mainicon" translatable="false">icon.png</string>
    <string name="game_wonall">You have passed all levels! Well done!</string>
    <string name="game_15">Fifteen</string>
    <string name="game_swap">Swap</string>
    <string name="game_puzzle">Puzzle</string>
    <string name="game_revolve">Revolve</string>
    <string name="menu_start_game_swap">Swap</string>
    <string name="menu_start_game_revolve">Revolve</string>
    <string name="gamedesc_15">Rearrange numbers into order moving tokens to empty field</string>
    <string name="gamedesc_swap">Restore picture by swapping two near by tokens</string>
    <string name="gamedesc_puzzle">Restore picture by swapping any two fragments</string>
    <string name="gamedesc_revolve">Restore picture by revolving columns or rows</string>
    <string name="gamename_fifteen_random">Game 15 (random)</string>
    <string name="gamename_puzzles_random">Puzzles (random)</string>
    <string name="gamename_fifteen_challenge">Game 15 (challenge)</string>
    <string name="gamename_puzzles_challenge">Puzzles (challenge)</string>
</resources>
