<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/gamename_fifteen_random"
            android:id="@+id/game_fifteen_random"
            style = "@style/MenuFont"
            android:onClick="onClick" />
        <TextView
            android:text="@string/gamename_puzzles_random"
            android:id="@+id/game_puzzles_random"
            style = "@style/MenuFont"
            android:onClick="onClick" />
        <TextView
            android:text="@string/gamename_fifteen_challenge"
            android:id="@+id/game_fifteen"
            style = "@style/MenuFont"
            android:onClick="onClick"/>
        <TextView
            android:text="@string/gamename_puzzles_challenge"
            android:id="@+id/game_puzzles"
            style = "@style/MenuFont"
            android:onClick="onClick"/>

        <TextView
            android:text=""
            style = "@style/MenuFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSpacer" />

        <TextView
            android:text="@string/menu_settings"
            android:id="@+id/settings"
            style = "@style/MenuFont"
            android:onClick="onClick"/>
        <TextView
            android:text="@string/menu_about"
            android:id="@+id/about"
            style = "@style/MenuFont"
            android:onClick="onClick"/>
        <TextView
            android:text="@string/menu_exit"
            android:id="@+id/exit"
            style = "@style/ExitFont"
            android:onClick="onClick"/>

        <!--<com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>-->
    </LinearLayout>

</RelativeLayout>