<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.28"
            android:src="@drawable/icon"
             />

        <TextView
            android:text="@string/gamename_fifteen_random"
            android:id="@+id/game_fifteen_random"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.14"
            android:onClick="onClick" />
        <TextView
            android:text="@string/gamename_puzzles_random"
            android:id="@+id/game_puzzles_random"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.14"
            android:onClick="onClick" />
        <TextView
            android:text="@string/gamename_fifteen_challenge"
            android:id="@+id/game_fifteen"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.14"
            android:onClick="onClick"/>
        <TextView
            android:text="@string/gamename_puzzles_challenge"
            android:id="@+id/game_puzzles"
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.14"
            android:onClick="onClick"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:layout_weight="0">

            <TableRow
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClick"
                    android:src="@drawable/ic_about" />

                <ImageButton
                    android:id="@+id/scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClick"
                    android:src="@drawable/ic_scores" />

                <ImageButton
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:onClick="onClick"
                    android:src="@drawable/ic_settings" />
            </TableRow>

        </TableLayout>

        <!--<com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId ="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>-->
    </LinearLayout>

</RelativeLayout>